kubernetes/apps/downloads/bazarr/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  annotations:
    external-dns/is-public: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    hajimari.io/enable: "true"
    hajimari.io/appName: "Bazarr"
    hajimari.io/group: "downloads"
    hajimari.io/icon: mdi:subtitles
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-internal-default-noauth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "bazarr.${SECRET_DOMAIN}"
      secretName: "bazarr.${SECRET_DOMAIN//./-}-prod-tls"
  rules:
    - host: bazarr.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
